--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -66,6 +66,7 @@
   padding: 8px 20px;
   background-color: transparent;
   border:1px solid #121212;
+  color: #121212;
   border-radius: 5px;
   font-size: 1.5em;
   display: flex;
